--- a/client/ui.css
+++ b/client/ui.css
@@ -1,5 +1,5 @@
 body {
-  padding: 70px 0;
+  padding: 10px 0 70px;
   cursor: default;
 }
 
@@ -7,8 +7,8 @@ a, tbody tr {
   cursor: pointer;
 }
 
-.navbar-nav {
-  width: 100%;
+.tab-content {
+  margin-top: 20px;
 }
 
 .navbar-progress {
